k8s-test/nifi/nifi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    name: nifi
    app: nifi

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi

    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      setHostnameAsFQDN: true
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always

      initContainers: #Container to wait for zookeeper to be active
        - name: wait-for-zookeeper
          image: docker.io/busybox:1.36
          command:
          - sh
          - -c
          - |
            echo "Connecting to Zookeeper ${NIFI_ZK_CONNECT_STRING}"
            until nc -vzw 1 zookeeper 2181 ; do
              echo "Waiting for zookeeper to start"
              sleep 3
            done
      containers:
      - name: nifi
        image: docker.io/apache/nifi:1.25.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 11443
          name: cluster
        - containerPort: 8443
          name: https
        - containerPort: 6342
          name: cluster-lb
