k8s-test/nifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nifi
        pathType: Prefix
        backend:
          service:
            name: nifi
            port:
              number: 8080
